--- a/app/globals.css
+++ b/app/globals.css
@@ -278,6 +278,15 @@ ul.alpha-paren li::marker {
 
 
 
+.scrollbar-hide {
+  scrollbar-width: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
 @layer utilities {
   .hover\:text-text6:hover {
     color: #ff740d;
